implementing serverless authentication option

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -10,13 +10,14 @@
     }
   },
   "ERRORS": {
-    "GENERIC": "An unexpected error occurred.",
-    "AUTH_001": "Authentication failed",
-    "AUTH_002": "Unauthorized",
-    "AUTH_003": "Invalid session",
-    "AUTH_004": "Session expired",
-    "SYST_001": "Validation failed for at least one field",
-    "SYST_002": "System error",
+    "SYST_001": "An unexpected error occurred.",
+    "SYST_002": "Validation failed for at least one field.",
+    "JWT_001": "Private key is invalid.",
+    "JWT_002": "Public key is invalid.",
+    "AUTH_001": "Authentication failed.",
+    "AUTH_002": "Unauthorized.",
+    "AUTH_003": "Invalid session.",
+    "AUTH_004": "Session expired.",
     "TOO_MANY_REQUESTS": "Too many requests. Please try again later.",
     "PASSWORD_INCORRECT": "Incorrect password. Please try again.",
     "PASSKEY_ERROR": "Login with Passkey took too long or was cancelled. Please try again.",
