--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -20,7 +20,8 @@
     "AUTH_004": "Session expired.",
     "TOO_MANY_REQUESTS": "Too many requests. Please try again later.",
     "PASSWORD_INCORRECT": "Incorrect password. Please try again.",
-    "PASSKEY_ERROR": "Login with Passkey took too long or was cancelled. Please try again.",
+    "PASSKEY_ERROR_LOGIN": "Login with Passkey took too long or was cancelled. Please try again.",
+    "PASSKEY_ERROR_REGISTER": "Register a Passkey took too long or was cancelled. Please try again.",
     "PASSKEY_FAILED": "Passkey authentication failed.",
     "PASSKEY_ALREADY_EXISTS": "Passkey already exists for this device",
     "MAGIC_LINK_FAILED": "Failed to send Magic Link.",
