--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -20,7 +20,8 @@
     "AUTH_004": "Session expirée",
     "TOO_MANY_REQUESTS": "Trop de requêtes. Veuillez réessayer plus tard.",
     "PASSWORD_INCORRECT": "Mot de passe incorrect. Veuillez réessayer.",
-    "PASSKEY_ERROR": "La connexion avec Passkey a pris trop de temps ou a été annulée. Veuillez réessayer.",
+    "PASSKEY_ERROR_LOGIN": "La connexion avec Passkey a pris trop de temps ou a été annulée. Veuillez réessayer.",
+    "PASSKEY_ERROR_REGISTER": "L'enregistrement d'une Passkey a pris trop de temps ou a été annulée. Veuillez réessayer.",
     "PASSKEY_FAILED": "Échec de l'authentification Passkey.",
     "PASSKEY_ALREADY_EXISTS": "Passkey déjà existante pour cet appareil",
     "MAGIC_LINK_FAILED": "Échec de l'envoi du lien magique.",
