small navbar ui improvements

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -5,7 +5,7 @@
   },
   "HOME_PAGE": {
     "META": {
-      "TITLE": "App Name - {name}",
+      "TITLE": "{name}",
       "DESCRIPTION": "Welcome to {name}!"
     }
   },
