--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -30,8 +30,7 @@
       "ERROR_LOGIN": "La connexion avec Passkey a pris trop de temps ou a été annulée. Veuillez réessayer.",
       "ERROR_REGISTER": "L'enregistrement d'une Passkey a pris trop de temps ou a été annulée. Veuillez réessayer.",
       "FAILED": "Échec de l'authentification Passkey.",
-      "ALREADY_EXISTS": "Passkey déjà existante pour cet appareil",
-      "EMAIL_NOT_FOUND": "Impossible de récupérer l'email de l'utilisateur. Veuillez vous reconnecter."
+      "ALREADY_EXISTS": "Passkey déjà existante pour cet appareil"
     },
     "MAGIC_LINK": {
       "FAILED": "Échec de l'envoi du lien magique."
