modal for updating passkey name

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -83,7 +83,8 @@
       "CANCEL": "Cancel",
       "RENAME_SUCCESS": "Passkey renamed successfully.",
       "DELETE": "Delete",
-      "DELETE_SUCCESS": "Passkey deleted successfully."
+      "DELETE_SUCCESS": "Passkey deleted successfully.",
+      "RENAME_PASSKEY_ARIA_LABEL": "Rename Passkey"
     },
     "USERNAME": {
       "TITLE": "Username",
